# EffectiveMobileTestEx

./: .env.example  README.md  alembic.ini  pyproject.toml
src/: main.py
src/api/: __init__.py  exception_handlers.py
src/api/admins/: __init__.py  provider.py  router.py  schemas.py  services.py
src/api/auth/: __init__.py  provider.py  router.py  schemas.py  services.py
src/api/users/: __init__.py  provider.py  router.py  schemas.py  services.py
src/core/: __init__.py  lifespan.py  taskiq_broker.py
src/core/config/: log_setup.py  settings.py
src/core/infra/: enums.py  exceptions.py  responses.py  schemas.py
src/database/: __init__.py  helper.py
src/database/migrations/: env.py
src/database/models/: __init__.py  admins.py  user.py
src/database/repositories/: __init__.py  admins.py  base.py  users.py
src/guards/: __init__.py
src/providers/: db_provider.py
src/redis_storage/: __init__.py
src/redis_storage/repositories/: __init__.py
src/startup/: add_admin.py
