[project]
name = "effectivemobiletestex"
version = "0.1.0"
description = ""
authors = [
    {name = "lenny",email = "your_email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "environs (>=14.3.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
