[project]
name = "effectivemobiletestex"
version = "0.1.0"
description = ""
authors = [
    {name = "lenny",email = "tokkaa@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "environs (>=14.3.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "taskiq-fastapi (>=0.3.5,<0.4.0)",
    "taskiq-aio-pika (>=0.4.3,<0.5.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
